--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
-    "git-commit-msg-linter": "^3.0.0"
+    "@types/node": "^14.14.21",
+    "git-commit-msg-linter": "^3.0.0",
+    "typescript": "^4.1.3"
   }
 }
