--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,18 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "@babel/polyfill": "^7.12.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.21.16",
+    "pg": "^8.5.1"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
